# Cargo.toml
[package]
name = "rust-tcp-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dashmap = "5.1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
ctrlc = "3.3"

[[bin]]
name = "chat-server"
path = "src/server.rs"

[[bin]]
name = "chat-client"
path = "src/client.rs"